# devbox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
configs/: management.sh
configs/aichat/: roles.yaml
configs/yazi/: init.lua  keymap.toml  theme.toml  yazi.toml
docs/: E2E_TEST_GUIDE.md  PACKAGES.md  QUICKSTART.md
docs/plans/: 2026-03-07-devbox-v2-design.md  2026-03-07-devbox-v3-design.md  2026-03-08-zellij-help-overlay-docs.md
docs/reference/: 2026-03-06-devbox-original-design.md
help/: bat.md  delta.md  devbox.md  docker.md  fd.md  fzf.md  git.md  httpie.md  index.md  lazygit.md  nvim.md  rg.md  yazi.md  zellij.md
host-configs/ghostty/: config
layouts/: ai-pair.kdl  debug.kdl  default.kdl  fullstack.kdl  git-review.kdl  monitor.kdl  presentation.kdl  tdd.kdl
nix/: configuration.nix  devbox-module.nix  flake.nix  home.nix
nix/sets/: ai-code.nix  ai-infra.nix  ai.nix  container.nix  default.nix  editor.nix  git.nix  lang-go.nix  lang-java.nix  lang-node.nix  lang-python.nix  lang-ruby.nix  lang-rust.nix  network.nix  shell.nix  system.nix  tools.nix
src/: main.rs
src/cli/: code.rs  commit.rs  config.rs  create.rs  destroy.rs  diff.rs  discard.rs  doctor.rs  exec.rs  help.rs  init.rs  layer.rs  layout.rs  list.rs  mod.rs  nix_cmd.rs  packages.rs  prune.rs  reprovision.rs  self_update.rs  shell.rs  snapshot.rs  status.rs  stop.rs  upgrade.rs  use_cmd.rs
src/nix/: mod.rs  rebuild.rs  sets.rs
src/runtime/: cmd.rs  detect.rs  docker.rs  incus.rs  lima.rs  (+2 more)
tests/: integration.rs
(+15 files in other folders)
